# esp-idf-mqtt-camera

./: CMakeLists.txt  Makefile  README.md  partitions.csv  pub.py  publish.py  saveFile.js  saveFile.py  sdkconfig.defaults  subscribe.py  viewFile.py
dash/: README.md
flask/: README.md  mqtt-client.py  mqtt.py
flask/templates/: _layout.html  index.html
main/: CMakeLists.txt  Kconfig.projbuild  camera.c  camera.h  cmd.h  gpio.c  http.h  http_server.c  idf_component.yml  keyboard.c  main.c  mqtt.h  mqtt_pub.c  mqtt_sub.c
